[gd_scene load_steps=15 format=3 uid="uid://dn0xc1xwb0rsa"]

[ext_resource type="Script" path="res://p/MainMenu.gd" id="1_0ip3n"]
[ext_resource type="Texture2D" uid="uid://bgu0vx06s42f8" path="res://p/MainScreen.png" id="1_4bfbk"]
[ext_resource type="Texture2D" uid="uid://bn51wogw76ojr" path="res://p/GetXp_Button.png" id="2_jb2xg"]
[ext_resource type="Texture2D" uid="uid://bd4dq1fbct3a3" path="res://p/LevelUpGreenBar.png" id="2_y8fsh"]
[ext_resource type="FontFile" uid="uid://3cc4ns15biko" path="res://p/ARIAL.TTF" id="3_24i8v"]
[ext_resource type="PackedScene" uid="uid://dqkff54b8k5dp" path="res://p/BuyPopup.tscn" id="5_38upo"]
[ext_resource type="LabelSettings" uid="uid://bgwx1dy1e7hnu" path="res://p/CurrencyLabelSettings.tres" id="5_msead"]

[sub_resource type="LabelSettings" id="LabelSettings_lqvdm"]
font = ExtResource("3_24i8v")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6jpo"]
atlas = ExtResource("2_y8fsh")
region = Rect2(0, 0, 203.146, 53)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k5a1t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_emrrg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8pf6e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v1kdf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ggow2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ip3n")

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4bfbk")
region_rect = Rect2(0, -1.6198, 900, 1601.62)

[node name="LevelLabel" type="Label" parent="BG"]
layout_mode = 0
offset_left = 2.0
offset_top = 9.0
offset_right = 85.0
offset_bottom = 71.0
text = "10"
label_settings = SubResource("LabelSettings_lqvdm")
horizontal_alignment = 1

[node name="ProgressBar" type="TextureProgressBar" parent="BG"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.025
anchor_bottom = 0.025
offset_left = 84.0
offset_top = -24.0
offset_right = 290.0
offset_bottom = 30.0
max_value = 150.0
value = 75.0
nine_patch_stretch = true
stretch_margin_top = 15
stretch_margin_bottom = 15
texture_progress = SubResource("AtlasTexture_h6jpo")

[node name="CoinLabel" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_top = 16.0
offset_right = 115.0
offset_bottom = 71.0
grow_horizontal = 2
text = "100"
label_settings = ExtResource("5_msead")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GemLabel" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -231.0
offset_top = 16.0
offset_right = -32.0
offset_bottom = 71.0
grow_horizontal = 0
text = "500"
label_settings = ExtResource("5_msead")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GetXpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -118.0
offset_right = 234.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_k5a1t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_emrrg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8pf6e")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v1kdf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ggow2")
icon = ExtResource("2_jb2xg")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BuyPopup" parent="." instance=ExtResource("5_38upo")]
visible = false
layout_mode = 1

[connection signal="pressed" from="GetXpButton" to="." method="OnXpButtonPressed"]
[connection signal="pop_up_closed" from="BuyPopup" to="." method="OnBuypopupClosed"]
